...
    <string name="general_cancel_action">Cancel</string>
    <string name="general_thanks_action">Thanks</string>
    <string name="general_gotit_action">Got it</string>
    <string name="general_na_label">N/A</string>
    <string name="general_empty_label">Empty</string>
    <string name="general_delete_action">Delete</string>
    <string name="general_dismiss_action">Dismiss</string>
    <string name="general_maybe_later_action">Maybe later</string>
    <string name="general_manage_action">Manage</string>
    <string name="general_quota_label">Quota</string>
    <string name="general_sync_action">Synchronize</string>
    <string name="general_reset_action">Reset</string>
    <string name="general_disconnect_action">Disconnect</string>
...
    <string name="general_donate_action">Donate</string>
    <string name="general_check_action">Check</string>
    <string name="general_internal_not_available_msg">Internet connection unavailable</string>
    <string name="general_refresh_action">Refresh</string>
    <string name="general_close_action">Close</string>
    <string name="general_continue">Continue</string>
    <string name="general_show_details_action">Show details</string>
    <string name="general_expand_action">Expand</string>
    <string name="general_collapse_action">Collapse</string>
    <string name="general_expanded_state_label">Expanded</string>
    <string name="general_collapsed_state_label">Collapsed</string>
    <string name="general_minutes_label">Minutes</string>
    <plurals name="general_minutes_quantity_label">
...
